# dual_clustering

./: .gitignore  CONTRIBUTING.md  DATASET_SUMMARY.md  DATA_PROCESSING_COMPLETE.md  EXECUTION_GUIDE.md  EXPERIMENTS_README.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  gpu_comprehensive_25517696.err  gpu_comprehensive_25517696.out  gpu_comprehensive_25518191.err  gpu_comprehensive_25518191.out  gpu_comprehensive_25520469.err  gpu_comprehensive_25520469.out  monitor_job.sh  pyproject.toml  requirements.txt  restart_experiment.sh  run_complete_experiments.py  setup.py  submit_comprehensive_eval.sh  test_local.sh
config/: base_config.yaml  solar_config.yaml  wind_config.yaml
config/experiment_configs/: ablation_study.yaml  benchmark_config.yaml
data/interim/: .gitkeep
data/processed/: entso_e_load_fixed.csv  entso_e_wind.csv  gefcom2014_solar.csv  gefcom2014_wind.csv  kaggle_solar_plant.csv  nrel_canada_wind.csv  nrel_solar.csv  nrel_wind.csv
docs/: experimental_redesign_summary.md  methodology.md  redesigned_experiments_section.md
experiments/: benchmark_experiment.py  comprehensive_evaluation.py  run_experiment.py
notebooks/: 01_data_exploration.py
scripts/: evaluate_model.py  process_datasets.py  train_model.py
src/: __init__.py
src/clustering/: __init__.py  base_clusterer.py  cluster_validator.py  dual_clusterer.py  fcm_clusterer.py  kmeans_clusterer.py
src/data/: __init__.py  data_loader.py  preprocessor.py  validator.py
src/evaluation/: __init__.py  evaluator.py  interval_evaluator.py  metrics.py  statistical_tests.py
src/features/: __init__.py
src/framework/: __init__.py  forecasting_framework.py  pipeline.py  prediction_interval_generator.py
src/models/: __init__.py  base_model.py  baseline_models.py  ensemble_predictor.py  random_forest_model.py
src/neutrosophic/: __init__.py  entropy_calculator.py  neutrosophic_transformer.py  uncertainty_quantifier.py
src/utils/: __init__.py  config_manager.py  logger.py  math_utils.py  visualization.py
src/visualization/: experiment_plots.py
tests/: test_framework.py
